--- a/TreeVisualization/TreeVisualization.csproj
+++ b/TreeVisualization/TreeVisualization.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AVLTree\AVLTree.csproj" />
+    <ProjectReference Include="..\AVLTree\Trees.csproj" />
   </ItemGroup>
 
 </Project>
