--- a/Trees/Trees.csproj
+++ b/Trees/Trees.csproj
@@ -48,9 +48,10 @@
     <Compile Include="Trees\AVL\AvlNode.cs" />
     <Compile Include="Trees\Base\Node.cs" />
     <Compile Include="Trees\AVL\AVLTree.cs" />
-    <Compile Include="Trees\Base\BinaryTree.cs" />
+    <Compile Include="Trees\Base\BaseBinaryTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Trees\BinaryTree\BinaryTree.cs" />
     <Compile Include="Trees\RedBlack\RedBlackNode.cs" />
     <Compile Include="Trees\RedBlack\RedBlackTree.cs" />
   </ItemGroup>
